--- a/src/list.vim.erb
+++ b/src/list.vim.erb
@@ -16,7 +16,7 @@
 " Sort:                                                                   [[[1
 " ============================================================================
 
-function! zl#list#unique_sort(list, ...) "                                [[[2
+function! <%=zl%>#list#unique_sort(list, ...) "                                [[[2
     "--------- ------------------------------------------------
     " Args    : list, [func]
     " Return  : unique sorted list
@@ -47,7 +47,7 @@ endfunction
 
 
 
-function! zl#list#sort_by(list, expr)
+function! <%=zl%>#list#sort_by(list, expr)
     "--------- ------------------------------------------------
     " Desc    : sort list by expr
     "
@@ -57,13 +57,13 @@ function! zl#list#sort_by(list, expr)
     "
     " Example : >
     "   let list = [{'a' : 1}, {'a' : 22}, {'a' : 3}]
-    "   echo zl#list#sort_by(list, 'v:val["a"]')
+    "   echo <%=zl%>#list#sort_by(list, 'v:val["a"]')
     "
     " Refer   : vital.vim
     "--------- ------------------------------------------------
 
     let pairs = map(a:list, printf('[v:val, %s]', a:expr))
-    return map(zl#list#sort(pairs,
+    return map(<%=zl%>#list#sort(pairs,
                 \ 'a:a[1] ==# a:b[1] ? 0 : a:a[1] ># a:b[1] ? 1 : -1'),
                 \ 'v:val[0]')
 endfunction
@@ -72,7 +72,7 @@ function! s:_compare(a, b)
     return eval(s:expr)
 endfunction
 
-function! zl#list#sort(list, expr)
+function! <%=zl%>#list#sort(list, expr)
     "--------- ------------------------------------------------
     " Desc    : sort list with expr to compare two values.
     "
@@ -91,7 +91,7 @@ function! zl#list#sort(list, expr)
 endfunction
 
 
-function! zl#list#uniq(list, ...)
+function! <%=zl%>#list#uniq(list, ...)
     let list = a:0
              \ ? map(copy(a:list), printf('[v:val, %s]', a:1))
              \ : copy(a:list)
