--- a/src/math.vim.erb
+++ b/src/math.vim.erb
@@ -1,34 +1,33 @@
 " =============== ============================================================
-" Name           : dict.vim
-" Description    : vim library: Dictionary
+" Name           : math.vim
+" Synopsis       : vim script library: math
 " Author         : Zhao Cai <caizhaoff@gmail.com>
 " HomePage       : https://github.com/zhaocai/zl.vim
-" Date Created   : Mon 03 Sep 2012 09:05:14 AM EDT
-" Last Modified  : Thu 20 Sep 2012 06:01:48 PM EDT
-" Tag            : [ vim, library, Dictionary ]
+" Date Created   : Sat 03 Sep 2011 03:54:00 PM EDT
+" Last Modified  : Thu 20 Sep 2012 04:25:10 PM EDT
+" Tag            : [ vim, math ]
 " Copyright      : © 2012 by Zhao Cai,
 "                  Released under current GPL license.
 " =============== ============================================================
 
 
-
-
-
-
-
+if !has('python')
+    <%=zl%>#print#error("some features require vim compiled with +python")
+    finish
+endif
 
 " ============================================================================
-" True Or False:                                                          [[[1
+" Random:                                                                 [[[1
 " ============================================================================
-function! zl#dict#has_key_value(dict, key, val) "                         [[[2
-    if !has_key(a:dict,a:key)
-        return 0
-    endif
-    if get(a:dict,a:key) != a:val
-        return 0
-    endif
-    return 1
+python << __PY__
+from random import random
+import vim
+__PY__
+
+function! <%=zl%>#math#rand()
+    return pyeval('random()')
 endfunction
+
 
 
 " ============================================================================
