--- a/src/opts.vim.erb
+++ b/src/opts.vim.erb
@@ -19,17 +19,17 @@
 " ============================================================================
 let s:undo_options = {}
 
-function! zl#opts#undo_options()
+function! <%=zl%>#opts#undo_options()
     return s:undo_options
 endfunction
 
-function! zl#opts#set(id, options)
+function! <%=zl%>#opts#set(id, options)
 
     "--------- ------------------------------------------------
     " Desc    : set options and return undo command
     "
     " Args    :
-    "   - id      : unique id for zl#opts#undo(id)
+    "   - id      : unique id for <%=zl%>#opts#undo(id)
     "   - options : list of options to save , use '&l :'
     "               prefix for local options
     "
@@ -42,11 +42,11 @@ function! zl#opts#set(id, options)
     "     \ , '&foldlevel'  : 4
     "     \ , '&guifont'    : 'Menlo for Powerline:h13'
     "     \ }
-    "     call zl#opts#set('Some Option Profile', options)
+    "     call <%=zl%>#opts#set('Some Option Profile', options)
     "
     "     " do something ...
     "
-    "     call zl#opts#undo('Some Option Profile')
+    "     call <%=zl%>#opts#undo('Some Option Profile')
     "--------- ------------------------------------------------
 
     let saved_options = {}
@@ -59,9 +59,9 @@ function! zl#opts#set(id, options)
 endfunction
 
 
-function! zl#opts#undo(id)
+function! <%=zl%>#opts#undo(id)
     if !has_key(s:undo_options, a:id)
-        zl#print#error('zl: undo option for key ' . a:id . ' was not set!')
+        <%=zl%>#print#error('zl: undo option for key ' . a:id . ' was not set!')
         return
     endif
     let saved_options = get(s:undo_options, a:id)
@@ -78,7 +78,7 @@ endfunction
 " ============================================================================
 " Parse Options:                                                          [[[1
 " ============================================================================
-function! zl#opts#parse(argline, option_list) "                           [[[2
+function! <%=zl%>#opts#parse(argline, option_list) "                           [[[2
     "--------- ------------------------------------------------
     " Desc    : parse command line options
     "
@@ -91,7 +91,7 @@ function! zl#opts#parse(argline, option_list) "                           [[[2
     " Example : >
     "   let argline = 'Cmd abc def -a -b -c=c_value -d'
     "   let opts = ['-a', '-b', '-c=']
-    "   let [args, options] = zl#util#parse_options(argline, options)
+    "   let [args, options] = <%=zl%>#util#parse_options(argline, options)
     "
     " Refer   : Unite.vim
     "--------- ------------------------------------------------
