--- a/src/path.vim.erb
+++ b/src/path.vim.erb
@@ -16,12 +16,12 @@
 " ============================================================================
 
 function! s:calc_confidence(base_confidence, path)
-    return a:base_confidence * zl#path#level(a:path)
+    return a:base_confidence * <%=zl%>#path#level(a:path)
 endfunction
 
 " confidence on a scale of 1-10
-call zl#rc#set_default({
-\ 'g:zl_root_markers' : [
+call <%=zl%>#rc#set_default({
+\ 'g:<%=zu%>_root_markers' : [
 \ {
 \    'confidence' : 9,
 \    'dir'        : ['.git' ,'.svn' ,'_darcs' , '.hg' ,'.bzr' ,'nbproject']
@@ -41,7 +41,7 @@ call zl#rc#set_default({
 \
 \ ]})
 
-function! zl#path#findup(type, namelist, path) "                          [[[2
+function! <%=zl%>#path#findup(type, namelist, path) "                          [[[2
     if a:type == 'dir'
         let Fn = function("finddir")
     elseif a:type == 'file'
@@ -66,11 +66,11 @@ function! zl#path#findup(type, namelist, path) "                          [[[2
     return directories
 endfunction
 
-function! zl#path#project_root_candidates(...) "                                [[[2
-    let search_directory =  a:0 >= 1  ?  zl#path#2dir(a:1)  : expand("%:p:h")
+function! <%=zl%>#path#project_root_candidates(...) "                                [[[2
+    let search_directory =  a:0 >= 1  ?  <%=zl%>#path#2dir(a:1)  : expand("%:p:h")
 
     if search_directory == ''
-        call zl#print#warning('empty or nonexisting path!')
+        call <%=zl%>#print#warning('empty or nonexisting path!')
         return {'most_possible' : '', 'candidates' : {}}
     endif
 
@@ -80,13 +80,13 @@ function! zl#path#project_root_candidates(...) "                                
     endif
 
     let found = {}
-    for mark in g:zl_root_markers
+    for mark in g:<%=zu%>_root_markers
         let confidence = 6
         for [k, v] in items(mark)
             if k == 'confidence'
                 let confidence = v
             elseif k == 'dir' || k == 'file'
-                let candidates = zl#path#findup(k, v, search_directory)
+                let candidates = <%=zl%>#path#findup(k, v, search_directory)
             endif
             unlet v " Fix E706: Variable type mismatch
         endfor
@@ -113,14 +113,14 @@ function! zl#path#project_root_candidates(...) "                                
     return {'most_possible' : most_possbile_found, 'candidates' : possible_candidates}
 endfunction
 
-function! zl#path#find_project_root(...) "                                [[[2
-    let candidates = call('zl#path#project_root_candidates', a:000)
+function! <%=zl%>#path#find_project_root(...) "                                [[[2
+    let candidates = call('<%=zl%>#path#project_root_candidates', a:000)
 
     return candidates['most_possible']
 endfunction
 
 
-function! zl#path#goto_project_root(...) "                                [[[2
+function! <%=zl%>#path#goto_project_root(...) "                                [[[2
     let opts = {
                 \ 'path' : expand("%:p"),
                 \ 'cd'   : 'cd',
@@ -129,11 +129,11 @@ function! zl#path#goto_project_root(...) "                                [[[2
         call extend(opts, a:1)
     endif
 
-    let root = zl#path#find_project_root(opts.path)
+    let root = <%=zl%>#path#find_project_root(opts.path)
     if &l:autochdir
         setl noautochdir
     endif
-    exec opts['cd'] . " " . zl#path#search_escape(root)
+    exec opts['cd'] . " " . <%=zl%>#path#search_escape(root)
     return root
 endfunction
 
@@ -145,27 +145,27 @@ let s:path_sep_char = (exists('+shellslash') ? '[\\/]' : '/')
 let s:path_sep_pattern = s:path_sep_char . '\+'
 
 " Convert all directory separators to "/".
-function! zl#path#unify_separator(path)
+function! <%=zl%>#path#unify_separator(path)
     return substitute(a:path, s:path_sep_pattern, '/', 'g')
 endfunction
 
-function! zl#path#substitute_separator(path) "                            [[[2
-    return zl#sys#is_win()
+function! <%=zl%>#path#substitute_separator(path) "                            [[[2
+    return <%=zl%>#sys#is_win()
                 \ ? substitute(a:path, '\\', '/', 'g') : a:path
 endfunction
 
-function! zl#path#2dir(path) "                                            [[[2
-    return zl#path#substitute_separator(isdirectory(a:path)
+function! <%=zl%>#path#2dir(path) "                                            [[[2
+    return <%=zl%>#path#substitute_separator(isdirectory(a:path)
                 \ ? a:path : filereadable(a:path)
                 \ ? fnamemodify(a:path, ':p:h') : ''
                 \ )
 endfunction
 
-function! zl#path#search_escape(name) "                              [[[2
+function! <%=zl%>#path#search_escape(name) "                              [[[2
     return escape(a:name, '*[]?{}, ')
 endfunction
 
-function! zl#path#smart_quote(path) "                                     [[[2
+function! <%=zl%>#path#smart_quote(path) "                                     [[[2
     """ DO NOT quote if
     " (1) it is quoted already
     " (2) it does not contain space
@@ -173,14 +173,14 @@ function! zl#path#smart_quote(path) "                                     [[[2
     return (a:path =~# '\s' && a:path !~# '^\([''"]\).*\1$') ? string(a:path) : a:path
 endfunction
 
-function! zl#path#level(path) "                                           [[[2
-    return zl#string#count(a:path, s:path_sep_char)
+function! <%=zl%>#path#level(path) "                                           [[[2
+    return <%=zl%>#string#count(a:path, s:path_sep_char)
 endfunction
 
-function! zl#path#tail(path,level,...) "                                  [[[2
+function! <%=zl%>#path#tail(path,level,...) "                                  [[[2
     let l:opts =  a:0 >= 1  ?  a:1  :  {}
 	if type(l:opts) != type({})
-		call zl#print#warning('optional opts should be a dictionary!')
+		call <%=zl%>#print#warning('optional opts should be a dictionary!')
     endif
 
     let l:modifier = has_key(l:opts,'modifier') ? l:opts.modifier : ''
@@ -188,7 +188,7 @@ function! zl#path#tail(path,level,...) "                                  [[[2
     let l:full_path = fnamemodify(a:path,':p'.l:modifier)
     let l:parent = fnamemodify(a:path, ":p" . repeat(':h',a:level))
 
-    return zl#path#substitute_separator(strpart(l:full_path,len(l:parent)))
+    return <%=zl%>#path#substitute_separator(strpart(l:full_path,len(l:parent)))
 endfunction
 
 " ============================================================================
