--- a/src/regex.vim.erb
+++ b/src/regex.vim.erb
@@ -20,7 +20,7 @@
 " ============================================================================
 " Escape:                                                                 [[[1
 " ============================================================================
-function! zl#regex#escape(text, ...) " (text, ?magic='m')               [[[2
+function! <%=zl%>#regex#escape(text, ...) " (text, ?magic='m')               [[[2
     "--------- ------------------------------------------------
     " Desc    : escape common special characters.
     "
@@ -32,7 +32,7 @@ function! zl#regex#escape(text, ...) " (text, ?magic='m')               [[[2
     " Return  : escaped text
     " Raise   :
     "
-    " Example : echo zl#regex#escape('I|||love&you\\\', 'v')
+    " Example : echo <%=zl%>#regex#escape('I|||love&you\\\', 'v')
     "
     " Refer   :
     "--------- ------------------------------------------------
