--- a/src/shell.vim.erb
+++ b/src/shell.vim.erb
@@ -13,7 +13,7 @@
 " ============================================================================
 " Load Guard:                                                             [[[1
 " ============================================================================
-if !zl#rc#load_guard('zl_' . expand('<sfile>:t:r'), 700, 100, ['!&cp'])
+if !<%=zl%>#rc#load_guard('<%=zu%>_' . expand('<sfile>:t:r'), 700, 100, ['!&cp'])
     finish
 endif
 
@@ -29,36 +29,36 @@ endif
 "			get tired of seeing the long prefix of /Users/username,...
 "  Raise   :
 "
-"  Example : > echo zl#shell#shorten_path(getcwd())
+"  Example : > echo <%=zl%>#shell#shorten_path(getcwd())
 "
 "  Refer   :
 " -------- - -----------------------------------------------
 
-if !exists("g:zl_path_mapping")
+if !exists("g:<%=zu%>_path_mapping")
 	" Note: longest match first
-	let g:zl_path_mapping = [
+	let g:<%=zu%>_path_mapping = [
 				\ [expand('/Volumes' . "$HOME") , '~'],
 				\ [expand("$HOME") , '~'],
 				\ [expand("$VIM") , '$VIM']
 				\]
 endif
 
-function! zl#shell#shorten_path(path)
+function! <%=zl%>#shell#shorten_path(path)
 	let l:path = a:path
 
-	for item in g:zl_path_mapping
+	for item in g:<%=zu%>_path_mapping
 		let l:path = substitute(l:path, '\V'.escape(item[0],'\'), item[1], 'ge' )
 	endfor
 
 	return l:path
 endfunction
 
-function! zl#shell#range_shorten_path(...) range
+function! <%=zl%>#shell#range_shorten_path(...) range
 	let l:save_cursor =  a:0 >= 1  ?  a:1  :  getpos(".")
 
 	for l:line in range(a:firstline,a:lastline)
 		let l:line_string = getline(l:line)
-		call setline(l:line, zl#shell#shorten_path(l:line_string))
+		call setline(l:line, <%=zl%>#shell#shorten_path(l:line_string))
 	endfor
 
 	call setpos('.', l:save_cursor)
