--- a/src/syntax.vim.erb
+++ b/src/syntax.vim.erb
@@ -27,17 +27,17 @@
 "
 "  Feature: Ignore certain syntax group
 "
-"   Config: 1. g:zl_hl_cword_disable_syntax
-"           2. g:zl_hl_cword_hlgroup
+"   Config: 1. g:<%=zu%>_hl_cword_disable_syntax
+"           2. g:<%=zu%>_hl_cword_hlgroup
 "
 "  Example: >
-"       let g:zl_hl_cword_hlgroup = 'SpellCap'
-"       nnoremap <silent> <C-h>h :<C-u>call zl#syntax#hl_cword_toggle()<CR>
+"       let g:<%=zu%>_hl_cword_hlgroup = 'SpellCap'
+"       nnoremap <silent> <C-h>h :<C-u>call <%=zl%>#syntax#hl_cword_toggle()<CR>
 " ============================================================================
 
-let s:zl_hl_cword_hlgroup = 'ZlCword'
-call zl#rc#set_default({
-            \ 'g:zl_hl_cword__ignore_urule' : {
+let s:<%=zu%>_hl_cword_hlgroup = 'ZlCword'
+call <%=zl%>#rc#set_default({
+            \ 'g:<%=zu%>_hl_cword__ignore_urule' : {
             \   'syntax' : [
             \     'Statement'        ,
             \     'SpecialStatement' ,
@@ -51,64 +51,64 @@ call zl#rc#set_default({
             \   ]
             \ }
             \
-            \ , 'g:zl_hl_cword_hlgroup' : s:zl_hl_cword_hlgroup
+            \ , 'g:<%=zu%>_hl_cword_hlgroup' : s:<%=zu%>_hl_cword_hlgroup
         \ })
-let s:zl_hl_cword__ignore_nrule = zl#rule#norm(
-            \   g:zl_hl_cword__ignore_urule, {
+let s:<%=zu%>_hl_cword__ignore_nrule = <%=zl%>#rule#norm(
+            \   g:<%=zu%>_hl_cword__ignore_urule, {
             \     'logic' : 'or',
             \   }
             \ )
 
-function! zl#syntax#hl_cword_toggle()
-    if exists('b:zl_hl_cword_auto') && b:zl_hl_cword_auto == 1
-        call <SID>zl_hl_cword_manual()
+function! <%=zl%>#syntax#hl_cword_toggle()
+    if exists('b:<%=zu%>_hl_cword_auto') && b:<%=zu%>_hl_cword_auto == 1
+        call <SID><%=zu%>_hl_cword_manual()
         echo 'auto highlight current word: off'
     else
-        call <SID>zl_hl_cword_auto()
+        call <SID><%=zu%>_hl_cword_auto()
         echo 'auto highlight current word: on'
     endif
 endfunction
 
-function! zl#syntax#hl_cword()
-    call <SID>zl_hl_cword_clear()
+function! <%=zl%>#syntax#hl_cword()
+    call <SID><%=zu%>_hl_cword_clear()
 
-    if zl#rule#is_false(s:zl_hl_cword__ignore_nrule)
-        let pattern = '\V\<' . zl#regex#escape(expand('<cword>'), 'V') . '\>'
-        if g:zl_hl_cword_hlgroup == 'ZlCword'
+    if <%=zl%>#rule#is_false(s:<%=zu%>_hl_cword__ignore_nrule)
+        let pattern = '\V\<' . <%=zl%>#regex#escape(expand('<cword>'), 'V') . '\>'
+        if g:<%=zu%>_hl_cword_hlgroup == 'ZlCword'
             exec 'hi '
-                \ . g:zl_hl_cword_hlgroup
+                \ . g:<%=zu%>_hl_cword_hlgroup
                 \ . ' GUI=reverse CTERM=reverse'
         else
             exec 'hi link '
-                \ . s:zl_hl_cword_hlgroup
+                \ . s:<%=zu%>_hl_cword_hlgroup
                 \ . ' '
-                \ . g:zl_hl_cword_hlgroup
+                \ . g:<%=zu%>_hl_cword_hlgroup
         endif
-        let b:zl_hl_cword_match = matchadd(g:zl_hl_cword_hlgroup, pattern)
+        let b:<%=zu%>_hl_cword_match = matchadd(g:<%=zu%>_hl_cword_hlgroup, pattern)
     endif
 endfunction
 
 
-function! s:zl_hl_cword_clear()
-    if exists('b:zl_hl_cword_match')
-        silent! call matchdelete(b:zl_hl_cword_match)
-        unlet b:zl_hl_cword_match
+function! s:<%=zu%>_hl_cword_clear()
+    if exists('b:<%=zu%>_hl_cword_match')
+        silent! call matchdelete(b:<%=zu%>_hl_cword_match)
+        unlet b:<%=zu%>_hl_cword_match
     endif
 endfunction
 
-function! s:zl_hl_cword_auto()
-    call zl#syntax#hl_cword()
+function! s:<%=zu%>_hl_cword_auto()
+    call <%=zl%>#syntax#hl_cword()
     augroup zlHlMatch
-        autocmd! CursorMoved <buffer> call zl#syntax#hl_cword()
+        autocmd! CursorMoved <buffer> call <%=zl%>#syntax#hl_cword()
     augroup end
-    let b:zl_hl_cword_auto = 1
+    let b:<%=zu%>_hl_cword_auto = 1
 endfunction
 
-function! s:zl_hl_cword_manual()
+function! s:<%=zu%>_hl_cword_manual()
     autocmd! zlHlMatch
-    call <SID>zl_hl_cword_clear()
+    call <SID><%=zu%>_hl_cword_clear()
 
-    let b:zl_hl_cword_auto = 0
+    let b:<%=zu%>_hl_cword_auto = 0
 endfunction
 
 
@@ -116,8 +116,8 @@ endfunction
 " Syntax Range:                                                           [[[1
 " ============================================================================
 
-function! zl#syntax#range_include( startPattern, endPattern, filetype, ... )
-    call zl#syntax#range_includeEx(
+function! <%=zl%>#syntax#range_include( startPattern, endPattern, filetype, ... )
+    call <%=zl%>#syntax#range_includeEx(
     \   printf('%s keepend start="%s" end="%s" containedin=ALL',
     \       (a:0 ? 'matchgroup=' . a:1 : ''),
     \       a:startPattern,
@@ -126,7 +126,7 @@ function! zl#syntax#range_include( startPattern, endPattern, filetype, ... )
     \   a:filetype
     \)
 endfunction
-function! zl#syntax#range_includeEx( regionDefinition, filetype )
+function! <%=zl%>#syntax#range_includeEx( regionDefinition, filetype )
     let l:syntaxGroup = 'synInclude' . toupper(a:filetype[0]) . tolower(a:filetype[1:])
 
     if exists('b:current_syntax')
@@ -151,19 +151,19 @@ function! zl#syntax#range_includeEx( regionDefinition, filetype )
     \)
 endfunction
 
-
-function! zl#syntax#range_syntax_ignore( startLine, endLine )
+function! <%=zl%>#syntax#range_syntax_ignore( startLine, endLine )
     if a:startLine == a:endLine
-	execute printf('syntax match synIgnoreLine /\%%%dl/', a:startLine)
+        execute printf('syntax match synIgnoreLine /\%%%dl/', a:startLine)
     elseif a:startLine < a:endLine && a:endLine == line('$')
-	execute printf('syntax match synIgnoreLine /\%%>%dl/', (a:startLine - 1))
+        execute printf('syntax match synIgnoreLine /\%%>%dl/', (a:startLine - 1))
     else
-	execute printf('syntax match synIgnoreLine /\%%>%dl\%%<%dl/', (a:startLine - 1), (a:endLine + 1))
+        execute printf('syntax match synIgnoreLine /\%%>%dl\%%<%%dl/',
+        \ (a:startLine - 1), (a:endLine + 1))
     endif
 endfunction
 
-function! zl#syntax#range( startLine, endLine, filetype )
-    call zl#syntax#range_include(
+function! <%=zl%>#syntax#range( startLine, endLine, filetype )
+    call <%=zl%>#syntax#range_include(
     \   printf('\%%%dl', a:startLine),
     \   (a:startLine < a:endLine && a:endLine == line('$') ?
     \       '\%$' :
@@ -179,7 +179,7 @@ endfunction
 " ColorColumn:                                                            [[[1
 " ============================================================================
 
-function! zl#syntax#colorcolum() "                                        [[[2
+function! <%=zl%>#syntax#colorcolum() "                                        [[[2
     "--------- ------------------------------------------------
     " Desc    : Toggle colorcolumn on and off
     "
@@ -189,7 +189,7 @@ function! zl#syntax#colorcolum() "                                        [[[2
     "
     " Example : >
     "   nnoremap <Leader>cc
-    "   \        :<C-u>call zl#syntax#colorcolum()<CR>
+    "   \        :<C-u>call <%=zl%>#syntax#colorcolum()<CR>
     "--------- ------------------------------------------------
 
     if empty(&colorcolumn)
@@ -213,11 +213,11 @@ endfunction
 " ============================================================================
 " Syntax Highlight Info:                                                  [[[1
 " ============================================================================
-function! zl#syntax#cursor_col(...) "                                     [[[2
+function! <%=zl%>#syntax#cursor_col(...) "                                     [[[2
     let opts = {
                 \ 'mode'  : mode(),
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
@@ -231,7 +231,7 @@ function! zl#syntax#cursor_col(...) "                                     [[[2
 endfunction
 
 
-function! zl#syntax#synstack_names(...) "                                 [[[2
+function! <%=zl%>#syntax#synstack_names(...) "                                 [[[2
     "--------- ------------------------------------------------
     " Desc    : Get actual syntax stack names of under cursor
     "
@@ -247,14 +247,14 @@ function! zl#syntax#synstack_names(...) "                                 [[[2
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
     let syn_stack = synstack(opts['line'], opts['col'])
-    return zl#list#uniq(
+    return <%=zl%>#list#uniq(
         \  map(copy(syn_stack), 'synIDattr(synIDtrans(v:val), "name")')
         \+ map(syn_stack, 'synIDattr(v:val, "name")')
         \ )
@@ -263,7 +263,7 @@ endfunction
 
 
 
-function! zl#syntax#cursor_hlgroup(...) "                                 [[[2
+function! <%=zl%>#syntax#cursor_hlgroup(...) "                                 [[[2
     "--------- ------------------------------------------------
     " Desc    : Get syntax group name of under cursor
     "
@@ -272,7 +272,7 @@ function! zl#syntax#cursor_hlgroup(...) "                                 [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     "
     " Return  : Highlight group name
@@ -281,15 +281,15 @@ function! zl#syntax#cursor_hlgroup(...) "                                 [[[2
 
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
     return synIDattr(synID(opts['line'], opts['col'], 1), "name")
 endfunction
 
-function! zl#syntax#cursor_trans_hlgroup(...) "                           [[[2
+function! <%=zl%>#syntax#cursor_trans_hlgroup(...) "                           [[[2
     "--------- ------------------------------------------------
     " Desc    : Get actual syntax group name of under cursor
     "
@@ -298,23 +298,23 @@ function! zl#syntax#cursor_trans_hlgroup(...) "                           [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     " Return  : Translated highlight group name
     " Raise   :
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
     return synIDattr(synIDtrans(synID(opts['line'], opts['col'], 1)), "name")
 endfunction
 
-function! zl#syntax#cursor_synid(...) "                                   [[[2
+function! <%=zl%>#syntax#cursor_synid(...) "                                   [[[2
     "--------- ------------------------------------------------
     " Desc    : Get detailed syntax ID under cursor
     "
@@ -323,16 +323,16 @@ function! zl#syntax#cursor_synid(...) "                                   [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     " Return  : syntax ID
     " Raise   :
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
@@ -360,7 +360,7 @@ function! zl#syntax#cursor_synid(...) "                                   [[[2
     return synid
 endfunction
 
-function! zl#syntax#cursor_gui(...) "                                     [[[2
+function! <%=zl%>#syntax#cursor_gui(...) "                                     [[[2
     "--------- ------------------------------------------------
     " Desc    : Get syntax highlight style under cursor
     "
@@ -369,16 +369,16 @@ function! zl#syntax#cursor_gui(...) "                                     [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     " Return  : gui
     " Raise   :
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
@@ -409,7 +409,7 @@ function! zl#syntax#cursor_gui(...) "                                     [[[2
     return gui
 endfunction
 
-function! zl#syntax#cursor_guifg(...) "                                   [[[2
+function! <%=zl%>#syntax#cursor_guifg(...) "                                   [[[2
     "--------- ------------------------------------------------
     " Desc    : Get syntax highlight guifg under cursor
     "
@@ -418,16 +418,16 @@ function! zl#syntax#cursor_guifg(...) "                                   [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     " Return  : guifg
     " Raise   :
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
@@ -445,7 +445,7 @@ function! zl#syntax#cursor_guifg(...) "                                   [[[2
     return guifg
 endfunction
 
-function! zl#syntax#cursor_guibg(...) "                                   [[[2
+function! <%=zl%>#syntax#cursor_guibg(...) "                                   [[[2
     "--------- ------------------------------------------------
     " Desc    : Get syntax highlight guibg under cursor
     "
@@ -454,7 +454,7 @@ function! zl#syntax#cursor_guibg(...) "                                   [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     "
     " Return  : guibg
@@ -462,9 +462,9 @@ function! zl#syntax#cursor_guibg(...) "                                   [[[2
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
@@ -481,7 +481,7 @@ function! zl#syntax#cursor_guibg(...) "                                   [[[2
     return guibg
 endfunction
 
-function! zl#syntax#cursor_hl(...) "                                      [[[2
+function! <%=zl%>#syntax#cursor_hl(...) "                                      [[[2
     "--------- ------------------------------------------------
     " Desc    : Combined info of above syntax#cursor_* funcs
     "
@@ -490,44 +490,44 @@ function! zl#syntax#cursor_hl(...) "                                      [[[2
     "   - opts : >
     "   {
     "      'line' : line('.') ,
-    "      'col'  : zl#syntax#cursor_col()  ,
+    "      'col'  : <%=zl%>#syntax#cursor_col()  ,
     "   }
     " Return  : Syntax highlight info under cursor
     " Raise   :
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
-    let info = [ zl#syntax#cursor_synid(opts)
-                \ , zl#syntax#cursor_guifg(opts)
-                \ , zl#syntax#cursor_guibg(opts)
-                \ , zl#syntax#cursor_gui(opts)
+    let info = [ <%=zl%>#syntax#cursor_synid(opts)
+                \ , <%=zl%>#syntax#cursor_guifg(opts)
+                \ , <%=zl%>#syntax#cursor_guibg(opts)
+                \ , <%=zl%>#syntax#cursor_gui(opts)
             \ ]
 
     return join(filter(info, "v:val != ''"), ' ')
 endfunction
 
-function! zl#syntax#cursor_hl_echo(...) "                                 [[[2
+function! <%=zl%>#syntax#cursor_hl_echo(...) "                                 [[[2
     "--------- ------------------------------------------------
-    " Desc    : Echo zl#syntax#cursor_hl()
+    " Desc    : Echo <%=zl%>#syntax#cursor_hl()
     "
     " Example : >
-    "   nnoremap <Leader>a :call zl#syntax#cursor_hl_echo()<CR>
+    "   nnoremap <Leader>a :call <%=zl%>#syntax#cursor_hl_echo()<CR>
     "--------- ------------------------------------------------
     let opts = {
                 \ 'line' : line('.') ,
-                \ 'col'  : zl#syntax#cursor_col()  ,
+                \ 'col'  : <%=zl%>#syntax#cursor_col()  ,
                 \}
-    if a:0 >= 1 && zl#var#is_dict(a:1)
+    if a:0 >= 1 && <%=zl%>#var#is_dict(a:1)
         call extend(opts, a:1)
     endif
 
-    let message = zl#syntax#cursor_hl(opts)
+    let message = <%=zl%>#syntax#cursor_hl(opts)
     echohl MoreMsg
     if message == ""
         echohl WarningMsg
@@ -536,7 +536,6 @@ function! zl#syntax#cursor_hl_echo(...) "                                 [[[2
     echo message
     echohl None
 endfunction
-
 
 
 
