--- a/src/web.vim.erb
+++ b/src/web.vim.erb
@@ -14,7 +14,7 @@
 " ============================================================================
 " Google:                                                                 [[[1
 " ============================================================================
-function! zl#web#google_suggest(query, language)
+function! <%=zl%>#web#google_suggest(query, language)
     " -------- - -----------------------------------------------
     "  Desc    : google suggest
     "
