--- a/src/buf.vim.erb
+++ b/src/buf.vim.erb
@@ -19,7 +19,7 @@
 " ============================================================================
 " Completion:                                                             [[[1
 " ============================================================================
-function! zl#buf#complete_name(arglead, cmdline, cursorpos) "             [[[2
+function! <%=zl%>#buf#complete_name(arglead, cmdline, cursorpos) "             [[[2
     let buffer_names = []
 
     for i in range( tabpagenr('$') )
@@ -28,7 +28,7 @@ function! zl#buf#complete_name(arglead, cmdline, cursorpos) "             [[[2
                     \ 'fnamemodify(bufname(v:val),":t") . ":" . v:val' )
     endfor
 
-    return filter( zl#list#unique_sort(buffer_names),
+    return filter( <%=zl%>#list#unique_sort(buffer_names),
                 \ 'stridx(v:val, a:arglead) == 0' )
 endfunction
 
@@ -45,23 +45,23 @@ function! s:_buf_quit_hook(cmd)
     return 0
 endfunction
 
-function! zl#buf#quit()
+function! <%=zl%>#buf#quit()
     if ! s:_buf_quit_hook('q')
         execute 'quit'
     endif
 endfunction
 
-function! zl#buf#del(cmd)
+function! <%=zl%>#buf#del(cmd)
     if ! s:_buf_quit_hook(a:cmd)
         let current = bufnr('%')
 
-        call zl#window#alternate_buffer()
+        call <%=zl%>#window#alternate_buffer()
 
         silent! execute a:cmd . ' ' . current
     endif
 endfunction
 
-function! zl#buf#safe_quit_all()
+function! <%=zl%>#buf#safe_quit_all()
     for i in range(tabpagenr('$'))
         let tabnr = i + 1
         try
@@ -79,7 +79,7 @@ endfunction
 " ============================================================================
 " Goto:                                                                   [[[1
 " ============================================================================
-function! zl#buf#goto(id)  " (buf_nr or partial_filename)                 [[[2
+function! <%=zl%>#buf#goto(id)  " (buf_nr or partial_filename)                 [[[2
     "--------- ------------------------------------------------
     " Desc    : goto buffer if visible, otherwise open
     "
@@ -88,8 +88,8 @@ function! zl#buf#goto(id)  " (buf_nr or partial_filename)                 [[[2
     " Raise   :
     "
     " Example : >
-    "   command! -nargs=1 -complete=customlist,zl#buf#complete_name J
-    "           \ call zl#buf#goto(<q-args>)
+    "   command! -nargs=1 -complete=customlist,<%=zl%>#buf#complete_name J
+    "           \ call <%=zl%>#buf#goto(<q-args>)
     "--------- ------------------------------------------------
 
     if a:id =~# '\v(.*):(\d+)$'
@@ -131,14 +131,14 @@ endfunction
 " ============================================================================
 " Infomation:                                                             [[[1
 " ============================================================================
-function! zl#buf#name_list() "                                            [[[2
+function! <%=zl%>#buf#name_list() "                                            [[[2
     return
     \ map(
     \   filter(
     \     range(1, bufnr('$')),
     \     'buflisted(v:val) && filereadable( bufname(v:val) )'
     \   ),
-    \   'zl#path#smart_quote( bufname(v:val) )'
+    \   '<%=zl%>#path#smart_quote( bufname(v:val) )'
     \ )
 endfunction
 
@@ -148,7 +148,7 @@ endfunction
 " ============================================================================
 " Output:                                                                 [[[1
 " ============================================================================
-function! zl#buf#redir(...) "                                             [[[2
+function! <%=zl%>#buf#redir(...) "                                             [[[2
     "--------- ------------------------------------------------
     " Desc    : Redirect command output to buffer
     "
@@ -163,7 +163,7 @@ function! zl#buf#redir(...) "                                             [[[2
     "
     " Example : >
     "   command! -nargs=* -complete=command Redir
-    "       \ call zl#buf#redir(<q-args>)
+    "       \ call <%=zl%>#buf#redir(<q-args>)
     "
     " Refer   :
     "   - genutils#GetVimCmdOutput
@@ -173,7 +173,7 @@ function! zl#buf#redir(...) "                                             [[[2
     "--------- ------------------------------------------------
 
     let opts = {'cmd'         : ''
-            \ , 'split'       : zl#window#nicely_split_cmd()
+            \ , 'split'       : <%=zl%>#window#nicely_split_cmd()
             \ , 'alway_split' : 1
         \}
     if a:0 >= 1 && type(a:1) == type({})
