--- a/src/find.vim.erb
+++ b/src/find.vim.erb
@@ -18,7 +18,7 @@
 " Grep:                                                                   [[[1
 " ============================================================================
 
-function! zl#find#vimgrep(query,where)
+function! <%=zl%>#find#vimgrep(query,where)
     " -------- - -----------------------------------------------
     "  Desc    : vimgrep the word pointed by the cursor
     "
@@ -27,19 +27,19 @@ function! zl#find#vimgrep(query,where)
     "  Raise   :
     "
     "  Example : nnoremap vf :<C-U>
-    "					\call zl#find#vimgrep(expand("<cword>"),"%")<CR>
+    "					\call <%=zl%>#find#vimgrep(expand("<cword>"),"%")<CR>
     "		     vnoremap <silent> vf :<C-U><CR>
     "					\gvy:
-    "                   \call zl#find#vimgrep(tlib#rx#Escape(@@),"%")<CR>
+    "                   \call <%=zl%>#find#vimgrep(tlib#rx#Escape(@@),"%")<CR>
     "  Refer   :
     "  Note    : escape specail characters like #,% in the query argument
     " -------- - -----------------------------------------------
 
-    "	call Dfunc('zl#find#vimgrep('.a:query.' '.a:where.')')
+    "	call Dfunc('<%=zl%>#find#vimgrep('.a:query.' '.a:where.')')
     let l:cmd = 'silent! vimgrep /'. a:query .'/ '.a:where
     exe l:cmd
-    call zl#quickfix#open(0,1,1,64,l:cmd)
-    "	call Dret('zl#find#vimgrep')
+    call <%=zl%>#quickfix#open(0,1,1,64,l:cmd)
+    "	call Dret('<%=zl%>#find#vimgrep')
 endfunction
 
 
