--- a/src/remote.vim.erb
+++ b/src/remote.vim.erb
@@ -16,17 +16,17 @@
 " Note: 1. Mac Users: make a symlink gvim to mvim
 "
 "---  FUNCTION  --------------------------------------------------------------
-" Function: zl#remote#open_server((servername,rc)                       [[[2
+" Function: <%=zl%>#remote#open_server((servername,rc)                       [[[2
 "     Desc: Open a remote vim server
 " Argument: servername
 "			server rc
 "   Return: 0 - fail || 1 - succeed
 "
-"  Example: if !zl#remote#open_server("ZREMOTE")
+"  Example: if !<%=zl%>#remote#open_server("ZREMOTE")
 "				finish
 "			endif
 
-func zl#remote#open_remoteserver(servername,...)
+func <%=zl%>#remote#open_remoteserver(servername,...)
 	if !has("clientserver") || !executable("gvim")
 		return 0
 	endif
@@ -37,7 +37,7 @@ func zl#remote#open_remoteserver(servername,...)
 
     let l:rc =  a:0 >= 1  ? " -u " . a:1  :  ''
 
-	if zl#sys#ostype() == "Windows"
+	if <%=zl%>#sys#ostype() == "Windows"
 		if ! executable("start")
 			return 0
 		endif
@@ -50,22 +50,22 @@ func zl#remote#open_remoteserver(servername,...)
 endf
 
 "---  FUNCTION  --------------------------------------------------------------
-" Function: zl#remote#exists_server                                     [[[2
+" Function: <%=zl%>#remote#exists_server                                     [[[2
 "     Desc:
 " Argument: servername
 "   Return: 0 - fail || 1 - succeed
 "
-"  Example: if !zl#remote#exists_server("ZREMOTE")
+"  Example: if !<%=zl%>#remote#exists_server("ZREMOTE")
 "				finish
 "			endif
 
-func zl#remote#exists_server(servername)
+func <%=zl%>#remote#exists_server(servername)
 	return (index(split(serverlist(), '\n'), a:servername) == -1) ? 0 : 1
 endf
 
 "===  COMMUNICATION  ===                                                  [[[1
 "
-func zl#remote#client_id(servername)
+func <%=zl%>#remote#client_id(servername)
 	return remote_expr(a:servername, 'expand("<client>")')
 endf
 
